--- a/src/app.html
+++ b/src/app.html
@@ -7,6 +7,21 @@
 			name="viewport"
 			content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"
 		/>
+		<meta name="twitter:card" content="summary_large_image" />
+		<meta name="twitter:site" content="@backlitbytes" />
+		<meta name="twitter:creator" content="@backlitbytes" />
+		<meta name="twitter:title" content="Lil&#039; Game Dream" />
+		<meta name="twitter:description" content="Play with an old friend; unlock all the carts." />
+		<meta name="twitter:image" content="/images/preview.png" />
+
+		<link rel="apple-touch-icon" sizes="152x152" href="/apple-touch-icon.png" />
+		<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+		<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+		<link rel="manifest" href="/site.webmanifest" />
+		<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5" />
+		<meta name="msapplication-TileColor" content="#da532c" />
+		<meta name="theme-color" content="#ffffff" />
+
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
